[gd_scene load_steps=2 format=3 uid="uid://building_base"]

[ext_resource type="Script" path="res://scripts/buildings/building.gd" id="1_building"]

[node name="Building" type="Area2D"]
script = ExtResource("1_building")

[node name="Sprite" type="Sprite2D" parent="."]
centered = false

[node name="ColorFallback" type="ColorRect" parent="."]
visible = false
offset_right = 96.0
offset_bottom = 96.0
color = Color(0.5, 0.6, 0.7, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(48, 48)

[node name="Label" type="Label" parent="."]
offset_right = 96.0
offset_bottom = 96.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
